# ml-j

./: .gitignore  README.md  build.bat  config.yaml  docker-build.bat  docker-run.bat  main.ipynb  pyproject.toml  pytest.ini
.agent/workflows/: workflow3.md
CPusPlusThings/basic_content/: EBO.cpp  const.md
docs/: STRUCTURE.md
output/: config_final.yaml
scripts/: tensorboard.sh
src/mini_ml.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/mini_ml/config/seg/hrnet/: HRNet_W48.config  HRNet_W48.config.yaml
src/mini_ml/core/: factory.py  predict.py  train.py  trainer.py
src/mini_ml/dataset/: pet_dataset.py  trans.py
src/mini_ml/models/: __init__.py
src/mini_ml/models/archs/: __init__.py  hrnet_segmentor.py
src/mini_ml/models/backbones/: blocks.py  hrnet.py
src/mini_ml/models/datasets/: __init__.py  cityscapes.py
src/mini_ml/models/heads/: __init__.py  simple_seg_head.py
src/mini_ml/models/losses/: __init__.py  combined_loss.py  custom_losses.py  pixel_contrast_cross_entropy_loss.py
src/mini_ml/models/lr_schedulers/: __init__.py  custom_lr_schedulers.py
src/mini_ml/models/optimizers/: __init__.py  custom_optimizers.py
src/mini_ml/models/transforms/: __init__.py  compose.py  custom_transforms.py
src/mini_ml/utils/: config.py  log.py  metrics.py  model.py  register.py
src/rewrite_model/config/hrnet/: HRNet_W48.config
src/rewrite_model/config/model/: hrnet18_config.yaml  hrnet_base_config.yaml
src/rewrite_model/core/: train.py
src/rewrite_model/models/: hrnet.py
src/rewrite_model/models/backbones/: hrnet.py
src/rewrite_model/models/core/: __init__.py
src/rewrite_model/utils/: __init__.py  config.py  logger.py  register.py  utils.py
tests/: test_hrnet.py  test_neuronnet.py
