[tool.poetry]
name = "rewrite_model"
version = "0.1.0"
authors = ["jungle <errorworld123@163.com>"]
description = "A small project for model rewriting"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "*"
scipy = "*"
matplotlib = "*"
pandas = "*"
scikit-learn = "*"
jupyterlab = "*"
rich = "*"
omegaconf = "*"
click = "*"
sympy = "^1.13.2"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
cli = "example_package_tom.example:main"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"