[tool.poetry]
name = "rewrite_model"
version = "0.1.0"
authors = ["jungle <errorworld123@163.com>"]
description = "A small project for model rewriting"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
huggingface-hub = "^0.26.2"
sympy = "^1.13.3"
numpy = "^2.1.3"
safetensors = "^0.4.5"
transformers = "^4.46.3"

[tool.poetry.dev-dependencies]
pytest = "^7.4"

[tool.poetry.scripts]
cli = "rewrite_model.main:main" # 修改为正确的模块和入口函数路径

[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true                                                # 将 tsinghua 源设为默认
